Third Main commit: main,menu2,bbmStyle.css, registrationForm.html,  All Donor code,all Employee code,(updated indexController, UserController,database.properties both,menu2 , login)

--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <!-- Adding Thymleaf Layout Dialect Dependency
-        <dependency>
+        <!-- Adding Thymleaf Layout Dialect Dependency-->
+        <!--<dependency>
             <groupId>az.net.ultrag.thymleaf</groupId>
             <artifactId>thymeleaf-layout-dialect</artifactId>
         </dependency>-->
