--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://127.0.0.1:3306/
-database=bloodbankmanagementdb
+database=BloodBankDB
 username=root
