commit: working login with hashpassword, user role is returned as null ???.

--- a/pom.xml
+++ b/pom.xml
@@ -60,11 +60,20 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <!-- Spring Boot Security Starter -->
         <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>-->
+
+        <!-- Java Password bcript/ Hashing dependencey-->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
